# games

./: .gitignore  CMakeLists.txt  README.md  TODO.md  bootstrap.bat  bootstrap.py  bootstrap.sh  config  test_bundle.rb  todo.txt
include/: audio.h  graphics.h  input.h  level.h  linear_algebra.h  ofbx.h  raster.h  resource.h  screen.h  state.h
include/agorafold/screens/: level_editor_screen.h  level_screen.h
include/backends/: audio_pulseaudio.h  audio_wasapi.h  graphics_opengl.h  graphics_vulkan.h
include/core/: graphics.h  input.h  resource.h  screen.h  state.h  util.h
include/core/backends/: audio_pulseaudio.h  audio_wasapi.h  graphics_opengl.h
include/glad/: glad.h
include/img_editor/: img_editor.hh
include/imgui/: imgui_impl_opengl3.h
include/launcher/: game_select.h  launcher.h  title.h
include/levels/: training_levels.h
include/screens/: level_editor_screen.h  level_screen.h  options_screen.h  splash_screen.h  title_screen.h
resources/: base_bundle.lua  hash_cache.json  resource_hash_cache.txt  resources.json  resources.txt
src/: audio.cpp  config.cpp  glad.c  graphics.cpp  input.cpp  level.cpp  linear_algebra.cpp  main.cpp  ofbx.cpp  raster.cpp  resource.cpp  resource_importer.cpp  screen.cpp  state.cpp  util.cpp
src/agorafold/: level.cpp  level.h
src/agorafold/levels/: training_levels.cpp  training_levels.h
src/agorafold/screens/: level_editor_screen.cpp  level_screen.cpp  options_screen.cpp  options_screen.h  splash_screen.cpp  splash_screen.h  title_screen.cpp  title_screen.h
src/backends/: audio_pulseaudio.cpp  audio_wasapi.cpp  graphics_opengl.cpp  graphics_vulkan.cpp
src/core/: audio.cpp  audio.h  config.cpp  glad.c  graphics.cpp  input.cpp  linear_algebra.cpp  raster.cpp  resource.cpp  resource.h  resource_importer.cpp  screen.cpp  state.cpp  util.cpp
src/core/backends/: audio_pulseaudio.cpp  audio_wasapi.cpp  graphics_opengl.cpp  graphics_vulkan.cpp  graphics_vulkan.h
src/core/glad/: glad.h
src/img_editor/: img_editor.cc
src/launcher/: game_select.cpp  launcher.h  main.cpp  title.cpp  title.h
src/levels/: training_levels.cpp
src/resource_editor/: image_editor.cc  image_editor.hh  resource_editor.cc  resource_editor.hh
src/screens/: level_editor_screen.cpp  level_screen.cpp  options_screen.cpp  splash_screen.cpp  title_screen.cpp
src/z2d/: z2d.cc  z2d.hh
